--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "cypress:open": "cypress open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
