--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ cache:
  directories:
  - node_modules
 script:
- - sudo $(which npm) test
- - npm test
- - npm run build
+ - yarn
+ - yarn test
 deploy:
  provider: pages
  skip_cleanup: true
