--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ cache:
   yarn: true
  directories:
  - node_modules
+install:
+before_script:
+  -yarn
 script:
- - yarn
 deploy:
  provider: pages
  skip_cleanup: true
