--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "cypress:open": "cypress open",
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
