--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ cache:
  - node_modules
 script:
  - yarn run build
- - yarn start && yarn cypress run
+ - yarn start & wait-on http://localhost:3001
+ - yarn cypress run
