--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cypress:open": "cypress open",
     "start": "export PORT=3001 && react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +27,7 @@
   ],
   "devDependencies": {
     "cypress": "^3.1.3",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "wait-on": "^3.2.0"
   }
 }
