--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ cache:
  - node_modules
 script:
  - yarn run build
+ - cypress install
  - yarn start & wait-on http://localhost:3001
  - yarn cypress run
