--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ script:
  - cypress install
  - yarn start & wait-on http://localhost:3001
  - yarn cypress run
+deploy:
+  provider: surge
+  project: ./build/
+  domain: giveit.surge.sh
+  skip_cleanup: true
