--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "cypress": "^3.1.3",
     "jest": "^23.6.0",
+    "surge": "^0.20.1",
     "wait-on": "^3.2.0"
   }
 }
