--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "kleur": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "surge": "^0.20.1",
   },
   "scripts": {
     "cypress:open": "cypress open",
@@ -28,7 +29,6 @@
   "devDependencies": {
     "cypress": "^3.1.3",
     "jest": "^23.6.0",
-    "surge": "^0.20.1",
     "wait-on": "^3.2.0"
   }
 }
