--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "surge": "^0.20.1",
+    "surge": "^0.20.1"
   },
   "scripts": {
     "cypress:open": "cypress open",
