--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "jquery": "^3.3.1",
     "json-server": "^0.14.0",
     "kleur": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "surge": "^0.20.1"
   },
   "scripts": {
     "cypress:open": "cypress open",
-    "start": "react-scripts start",
+    "start": "export PORT=3001 && react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,6 +28,7 @@
   ],
   "devDependencies": {
     "cypress": "^3.1.3",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "wait-on": "^3.2.0"
   }
 }
