--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "json-server": "^0.14.0",
     "kleur": "^3.0.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "surge": "^0.20.1"
