--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
     "jquery": "^3.3.1",
     "json-server": "^0.14.0",
     "kleur": "^3.0.1",
