--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.7.0",
+    "@material/textfield": "^0.42.1",
     "jquery": "^3.3.1",
     "json-server": "^0.14.0",
     "kleur": "^3.0.1",
