--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
+    "@material-ui/icons": "^3.0.1",
+    "contentful": "^7.0.5",
     "jquery": "^3.3.1",
     "json-server": "^0.14.0",
     "kleur": "^3.0.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
