--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
+    "@material/menu": "^0.42.1",
     "contentful": "^7.0.5",
     "jquery": "^3.3.1",
     "json-server": "^0.14.0",
