--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "json-server": "^0.14.0",
     "kleur": "^3.0.1",
@@ -10,6 +11,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
     "surge": "^0.20.1"
   },
   "scripts": {
