--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "kleur": "^3.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.6.3",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.3",
     "react-google-maps": "^7.3.0",
     "react-router-dom": "^4.3.1",
